--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="assets/images/banner3.jpg" width="800" height="400">
+                    <img src="assets/images/bg3.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
                             <h1> SAFE AND HIGH PERFORMANCE INVESTMENTS IN RELATIVELY SHORT TERMS</h1>
@@ -51,7 +51,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="assets/images/banner3.jpg" width="800" height="400">
+                    <img src="assets/images/bg2.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
                             <h1>OPERATING EFFICIENCY, ADVANCED AVIONIC AND IMPRESSIVE INTERIORS</h1>
@@ -59,7 +59,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="assets/images/banner3.jpg" width="800" height="400">
+                    <img src="assets/images/bg3.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
                             <h1>KEY AVIATION OPENS THE POSSIBILITIES OF BUYING, MAINTENANCE, CONVERSION AND LEASING AN AIRCRAFT ACCORDING TO YOUR SPECIFIC PREFERENCE AND DESIRES</h1>
