--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <div style="padding:5%;">
             <div class="contact-table">
                 <div class="left-side">
-                    <img src="">
+                    <!-- <img src=""> -->
                     <p><b>GENERAL</b></p>
                     <p class="italic">For office-specific contact information, please visit our offices page.</p>
                     <p><i class="fa fa-phone"></i>Switchboard: +1 (212) 583-5000</p>
