--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <img src="assets/images/border-golden.png" style="max-width: 300px;">
             </span>
         </div>
-        <div class="container" style="padding-top: 30px; padding-bottom: 30px;">
+        <div class="container" style="padding-top: 5%; padding-bottom: 5%;">
             <div class="left-block">
                 <p>We specialize in 4 essential services that are:</p>
                 <p style="max-width: 250px; display:inline-block;"><b>Purchase, maintenance, conversion and leasing of airplanes.</b></p>
@@ -134,7 +134,7 @@
                         The turn-around time for this process will vary, depending on the work needed on the aircraft, but should always be within two to six months. This time frame will be establi- shed by a third party company that will measure the investment specifications.
                     </div>
                 </div>
-                <p style="text-align: left;">Once the investment is completed and the return is received, the profits will be deposited to investors or reinvested at their discretion.</p>
+                <p style="text-align: left; margin-bottom: 0px;">Once the investment is completed and the return is received, the profits will be deposited to investors or reinvested at their discretion.</p>
                 <img class="background-round" src="assets/images/bgfaded.png"/>
             </div><div 
             class="right-block">
