--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         The turn-around time for this process will vary, depending on the work needed on the aircraft, but should always be within two to six months. This time frame will be establi- shed by a third party company that will measure the investment specifications.
                     </div>
                 </div>
-                <p style="text-align: left; margin-bottom: 0px;">Once the investment is completed and the return is received, the profits will be deposited to investors or reinvested at their discretion.</p>
+                <p style="text-align: left;">Once the investment is completed and the return is received, the profits will be deposited to investors or reinvested at their discretion.</p>
                 <img class="background-round" src="assets/images/bgfaded.png"/>
             </div><div 
             class="right-block">
@@ -158,7 +158,7 @@
                     <img src="assets/images/leaf.png" style="display: inline; width:20px;">
                     <h2 style="display: inline; border-bottom:1px solid #ab9364;">NEWSLETTER</h2>
                 </div>
-                <p style="text-align: left; padding:10px 5%;">Subscribe to our Newsletter where you can be aware of the available aircraft and their buying process.
+                <p style="text-align: left; padding:10px 5%; margin-bottom: 0px;">Subscribe to our Newsletter where you can be aware of the available aircraft and their buying process.
                     <br />
                     We will send you a summary of each project with investment opportunities, as well as the latest Key Aviation news. In addition to individual and specific reports on investment progress.
                     <br />
