--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
                 <div style="position:relative; box-shadow: 1px 3px 3px 0px rgba(0, 0, 0, 0.3)">
                     <div class="uk-slidenav-position" data-uk-slideshow="{kenburns:true, autoplay:true}">
                         <ul class="uk-slideshow uk-overlay-active" data-uk-slideshow>
-                            <li>
-                                <img src="assets/images/banner.jpg" width="800" height="400">
-                            </li>
+                            <li><img src="assets/images/gh3.png" width="800" height="400"></li>
+                            <li><img src="assets/images/gh1.png" width="800" height="400"></li>
+                            <li><img src="assets/images/gh2.png" width="800" height="400"></li>
+                            <li><img src="assets/images/g4.png" width="800" height="400"></li>
                         </ul>
                         <!-- <a href="" class="uk-slidenav uk-slidenav-contrast uk-slidenav-previous" data-uk-slideshow-item="previous"></a>
                         <a href="" class="uk-slidenav uk-slidenav-contrast uk-slidenav-next" data-uk-slideshow-item="next"></a> -->
@@ -151,6 +152,7 @@
                             <li data-uk-slideshow-item="0"><a href=""></a></li>
                             <li data-uk-slideshow-item="1"><a href=""></a></li>
                             <li data-uk-slideshow-item="2"><a href=""></a></li>
+                            <li data-uk-slideshow-item="3"><a href=""></a></li>
                         </ul>
                     </div>
                 </div>
