--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
 
     <title>Key Aviation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/css/uikit.min.css" />
@@ -20,6 +23,7 @@
             <ul class="uk-navbar-nav">
                 <li><a href="#Home" data-uk-smooth-scroll>Home</a></li>
                 <li><a href="#AboutUs" data-uk-smooth-scroll>About Us</a></li>
+                <li><a href="#Services" data-uk-smooth-scroll>Services</a></li>
                 <li><a href="#Investors" data-uk-smooth-scroll>Investors</a></li>
                 <li><a href="#Contact" data-uk-smooth-scroll>Contact</a></li>
                 <li><a href="#" data-uk-smooth-scroll>Log In</a></li>
@@ -34,11 +38,10 @@
 
     <div class="banner-slider" id="Home">
         <div class="uk-slidenav-position" data-uk-slideshow="{autoplay:true}">
-            <img src="assets/images/ng1.png" style="width:100% !important; opacity:0">
             <ul class="uk-slideshow uk-overlay-active uk-slideshow-fullscreen myheight" data-uk-slideshow>
 
                 <li>
-                    <img src="assets/images/ng1.png" width="800" height="400">
+                    <img src="assets/images/newslide1.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
                             <h1>WELCOME TO KEY AVIATION</h1>
@@ -50,11 +53,10 @@
                     </div> -->
                 </li>
                 <li>
-                    <img src="assets/images/ng2.png" width="800" height="400">
+                    <img src="assets/images/newslide2.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
-                        <div class="overlay-inside-content blue">
-                            <h1>WELCOME TO KEY AVIATION</h1>
-                            <p>SAFE AND HIGH PERFORMANCE INVESTMENTS IN RELATIVELY SHORT TERMS</p>
+                        <div class="overlay-inside-content">
+                            <h1 style="font-size: 28px;">￼Safe and high performance investments in relatively short term</h1>
                         </div>
                     </div>
                     <!-- <div class="another">
@@ -62,11 +64,11 @@
                     </div> -->
                 </li>
                 <li>
-                    <img src="assets/images/ng3.png" width="800" height="400">
+                    <img src="assets/images/newslide3.jpeg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
-                            <h1>WELCOME TO KEY AVIATION</h1>
-                            <P>OPENS THE POSSIBILITIES OF BUYING, MAINTENAINCE, CONVERSION AND LEASING AN AIRCRAFT ACCORDING TO YOUR SPECIFIC PREFERENCES AND DESIRES</P>
+                            <h1 style="font-size: 28px;">￼Opens the possibilities of buying, maintenance, conversion and leasing an aircraft according to your specific preference and desires.</h1>
+
                         </div>
                     </div>
                     <!-- <div class="another">
@@ -74,11 +76,10 @@
                     </div> -->
                 </li>
                 <li>
-                    <img src="assets/images/ng4.png" width="800" height="400">
+                    <img src="assets/images/newslide4.jpg" width="800" height="400">
                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content uk-flex uk-flex-center uk-flex-middle uk-text-center">
                         <div class="overlay-inside-content">
-                            <h1>WELCOME TO KEY AVIATION</h1>
-                            <P>OPERATING EFFICIENCY, ADVANCED AND IMPRESSIVE INTERIORS</P>
+                            <h1 style="font-size: 28px;">OPERATING EFFICIENCY, ADVANCED AND IMPRESSIVE INTERIORS</h1>
                         </div>
                     </div>
                     <!-- <div class="another">
@@ -104,7 +105,7 @@
                 <img src="assets/images/border-golden.png" style="max-width: 300px;">
             </span>
         </div>
-        <div class="container" style="padding-top: 5%; padding-bottom: 5%;">
+        <div class="container" style="padding-top:0px; padding-bottom: 40px; padding-left: 5%; padding-right: 5%;">
             <div class="left-block">
                 <p>We specialize in 4 essential services that are:</p>
                 <p style="max-width: 250px; display:inline-block;"><b>Purchase, maintenance, conversion and leasing of airplanes.</b></p>
@@ -135,6 +136,12 @@
                     </div>
                 </div>
                 <p style="text-align: left;">Once the investment is completed and the return is received, the profits will be deposited to investors or reinvested at their discretion.</p>
+                
+                <div style='padding-top: 20px; cursor: pointer;' data-uk-modal="{target:'#whoIsKeyAviation'}">
+                    <p class="heading button-style" >Who Is Key Aviation</p>
+                    <br />
+                    <img src="assets/images/border3.png" style="max-width: 200px;">
+                </div>
                 <img class="background-round" src="assets/images/bgfaded.png"/>
             </div><div 
             class="right-block">
@@ -162,12 +169,45 @@
                 </div>
                 <p style="text-align: left; padding:10px 5%; margin-bottom: 0px;">Subscribe to our Newsletter where you can be aware of the available aircraft and their buying process.
                     <br />
+                    <br />
                     We will send you a summary of each project with investment opportunities, as well as the latest Key Aviation news. In addition to individual and specific reports on investment progress.
+                    <br />
                     <br />
                     Always aware of the latest news!</p>
             </div>
         </div>
     </div>
+
+    <div class="services-block" id="Services">
+        <div class="heading-block" style="background-image: url('assets/images/services.jpeg');">
+            <div class="overlay">
+                <div></div>
+            </div>
+            <h1>SERVICES</h1>
+        </div>
+        <div class="content">
+            <div class="blocks" style="margin-right: 30px;">
+                <h4><i></i>MAINTAINANCE</h4>
+                <p>We distinguish ourselves by the quality that we offer to our clients, that is why we carry a strict process of maintenance. We make sure that each aircraft has the best maintenance service for its optimal operation and the safety of our customers and investors.</p>
+            </div>
+            <div class="blocks">
+                <h4><i></i>FOR SALE</h4>
+                <p>The purchase of our aircraft is possible at the end of the remodeling process. The quality, comfort, design and technology of our aircraft makes them unique in their kind.<br />Do not forget to subscribe to our newsletter to receive the best pur- chase offers!</p>
+            </div>
+            <div class="blocks" style="margin-right: 30px;">
+                <h4><i></i>CONVERSION</h4>
+                <p>Our planes go through an exclusive and customized remodeling pro- cess. The interior of our aircrafts is inspired by the latest trends in design and technology, without leaving aside the comfort of passengers.</p>
+            </div>
+            <div class="blocks">
+                <h4><i></i>LEASING</h4>
+                <p>We have leasing plans to suit you. Wherever you go, do it with style and comfort. Write us your request and we gladly quote you the best personalized leasing service!
+                <br />
+                <br />
+                </p>
+            </div>
+        </div>
+    </div>
+
     <div class="investors" id="Investors">
         <div class="heading-block">
             <h1>INVESTORS</h1>
@@ -191,7 +231,16 @@
             class="right-block">
                 <div class="investor-img"></div>
                 <h2>STEPHEN A. SCHWARZMAN CHAIRMAN<br />CEO & CO-FOUNDER</h2>
-                <img src="assets/images/blocks.png" style="max-width:480px; width:100%; margin-top: 20px;">
+                <div class="buttons">
+                    <button class="values" style="background-color: #54c8d0">GUIDING PRINCIPLES</button>
+                    <br />
+                    <button class="values" style="margin-right: 15px; background-color: #15b5e1;">ACCOUNTABILITY</button>
+                    <button class="values" style="margin-right: 15px; background-color: #115b83">ENTREPRENEURSHIP</button>
+                    <button class="values" style="background-color: #890d41;">TEAMWORK</button>
+                    <br />
+                    <button class="values" style="margin-right: 15px; background-color: #ee515f">INTEGRITY</button>
+                    <button class="values" style="background-color: #fb8f4d;">EXCELLENCE</button>
+                </div>
             </div>
         </div>
     </div>
@@ -199,7 +248,7 @@
         <div class="heading-block">
             <h1>CONTACT US</h1>
         </div>
-        <div style="padding:5%;">
+        <div style="padding:0px 5% 40px 5%; background-color: #05192e">
             <div class="contact-table">
                 <div class="left-side">
                     <!-- <img src=""> -->
@@ -256,6 +305,32 @@
     </div> -->
 
 </div>
+
+
+<div id="whoIsKeyAviation" class="uk-modal">
+    <div class="uk-modal-dialog uk-modal-dialog-large">
+        <a class="uk-modal-close uk-close"></a>
+        <div class="main-container">
+            <div class="header">
+                <div class="overlay"></div>
+                <h1>WHO IS KEY AVIATION</h1>
+            </div>
+            <div class="main-content">
+                <div class="div1">
+                    <!-- <img src="assets/images/plus.png"> -->
+                    <div class="overlay"></div><p><span class="yellow">Key Aviation’s</span> focus is on purchasing older airplanes, updating them, and then selling these planes for a profit, very similar to the process of flipping real estate. This task provides invest- ment opportunities for those looking for a safe, high yield investment.<br />Key Aviation identifies sellers and buyers of aircraft, as well as investors.</p>
+                </div><div 
+                class="div2"><p>
+                <span class="yellow">Key Aviation</span> is based out of San Bernardino, California and will partner with Stratus Aircraft Services, Inc. who will do the upgrades and maintenance work on each aircraft. Stratus Aircraft Services is certified with the Federal Aviation Administration (FAA) under Title 14 of the Code of Federal Regula- tions and specializes in aircraft main- tenance, modification, maintenance support, inspection for commercial, military, regional, business, and trans- port. The company has earned a global reputation for repair quality, dependable turnaround times and competitive pricing.</p>
+                </div><div 
+                class="div3">
+                    <p><span class="yellow">Salomon Zirdok</span> is the founder and CEO of Key Aviation. He created the Company when he saw that indivi- duals who wanted to purchase an air- craft, but had limited resources, were unable to obtain access to the aero- nautic market. This concept provides not just the product, but fills a need within the marketplace.</p>
+                    <p><b>Salomon Zirdok</b> not new to business ownership or operations. He launched his first entrepreneurial endeavor at the age of 20. Since his start, he has created and improved four additional successful businesses across a variety of industries. Today, Zirdok provides services throughout Mexico and the United States.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
         
 
 
@@ -264,6 +339,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/uikit.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/components/slideshow.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/core/smooth-scroll.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.2/js/components/parallax.min.js"></script>
 
 </body>
 </html>
