--- a/projects.html
+++ b/projects.html
@@ -173,7 +173,7 @@
                 </ul>
             </div><div
             class="right-block">
-                <h4 class="yellow">NVESTMENT AND RETURN</h4>
+                <h4 class="yellow">INVESTMENT AND RETURN</h4>
                 <ul>
                     <li style="margin-bottom:10px;">Market value price – after modification – 9 million USD Gross expected profit:</li>
                     <li>1st Aircraft – 2.5 million USD – Delivery time – 8 months</li>
