--- a/projects.html
+++ b/projects.html
@@ -20,11 +20,37 @@
 
 <div class="container projects-container">
 
+    <nav class="uk-navbar" style="text-align: center;">
+        <div style="display: inline-block;">
+            <ul class="uk-navbar-nav">
+                <li><a href="/#Home">Home</a></li>
+                <li><a href="/#AboutUs" >About Us</a></li>
+                <li><a href="/#Services" >Services</a></li>
+                <li><a href="/#Investors" >Investors</a></li>
+                <li><a href="/#Contact" >Contact</a></li>
+                <li><a href="#" data-uk-smooth-scroll>Log In</a></li>
+                
+                <!-- <li class="uk-parent"><a href="">Services</a></li> -->
+            </ul>
+        </div>
+        <br />
+        <img src="assets/images/Logotipo.png">
+    </nav>
+    <div class="social-icons">
+        <ul>
+            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+            <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+            <li><a href=""><i class="fa fa-facebook"></i></a></li>
+            <li><a href=""><i class="fa fa-instagram"></i></a></li>
+            <li><a href=""><i class="fa fa-youtube"></i></a></li>
+        </ul>
+    </div>
 
-    <div class="cargo-info">
+
+    <div class="cargo-info" >
         <div class="upper-section">
             <div class="overlay">
-                <h1><i class="yellow fa fa-plane"></i>LG AVIATION, INC - CARGO DIVISION</h1>
+                <h1 style="margin-top:200px;"><i class="yellow fa fa-plane"></i>LG AVIATION, INC - CARGO DIVISION</h1>
             </div>
         </div>
         <div class="lower-section">
