--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <p><b>OUR PRIORITY</b></p>
                 <p>Everything we do is guided by a set of principles that define our character and culture; they have been at the core of Blackstone since its inception. These enduring qualities are the shared convictions that we bring to our professional and personal conduct – they are a fun- damental strength of our business.</p>
                 <p>Above all, we have made it our No. 1 priority to serve the needs of our investors and clients. This commitment is reflected in a culture that values integrity, professionalism and a pas- sion for excellence. It also leads us to operate with prudence, financial discipline, a long-term perspective, and a clear understanding that trust is something we must earn every day.</p>
-                <a href="projects.html" target="_blank">
+                <a href="projects.html">
                     <div style="text-align: center;">
                         <img src="assets/images/increasing.png" style="padding-bottom: 10px;">
                         <br />
