--- a/projects.html
+++ b/projects.html
@@ -23,11 +23,11 @@
     <nav class="uk-navbar" style="text-align: center;">
         <div style="display: inline-block;">
             <ul class="uk-navbar-nav">
-                <li><a href="/#Home">Home</a></li>
-                <li><a href="/#AboutUs" >About Us</a></li>
-                <li><a href="/#Services" >Services</a></li>
-                <li><a href="/#Investors" >Investors</a></li>
-                <li><a href="/#Contact" >Contact</a></li>
+                <li><a href="/keyaviation/#Home">Home</a></li>
+                <li><a href="/keyaviation/#AboutUs" >About Us</a></li>
+                <li><a href="/keyaviation/#Services" >Services</a></li>
+                <li><a href="/keyaviation/#Investors" >Investors</a></li>
+                <li><a href="/keyaviation/#Contact" >Contact</a></li>
                 <li><a href="#" data-uk-smooth-scroll>Log In</a></li>
                 
                 <!-- <li class="uk-parent"><a href="">Services</a></li> -->
