--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#Services" data-uk-smooth-scroll>Services</a></li>
                 <li><a href="#Investors" data-uk-smooth-scroll>Investors</a></li>
                 <li><a href="#Contact" data-uk-smooth-scroll>Contact</a></li>
-                <li><a href="#" data-uk-smooth-scroll>Log In</a></li>
+                <li><a href="login">Log In</a></li>
                 
                 <!-- <li class="uk-parent"><a href="">Services</a></li> -->
             </ul>
@@ -276,17 +276,22 @@
                     <p class="italic" style="word-wrap: break-word;"><i class="fa fa-envelope" style="display: inline;"></i>BlackstonelnvestorRelations@blackstone.com</p>
                 </div><div 
                 class="right-side">
-                    <label>NAME</label>
-                    <input type="text" name="name">
+                    <form>
+                        <label>NAME</label>
+                        <input type="text" name="name">
 
-                    <label>PHONE</label>
-                    <input type="number" name="phone">
+                        <label>PHONE</label>
+                        <input type="number" name="phone">
 
-                    <label>EMAIL</label>
-                    <input type="text" name="email">
+                        <label>EMAIL</label>
+                        <input type="text" name="email">
 
-                    <label>COMMENTS</label>
-                    <textarea></textarea>
+                        <label>COMMENTS</label>
+                        <textarea name="comment"></textarea>
+                        <div style="text-align: center; padding-top: 20px;">
+                            <button type="submit" class="button-style" style="padding-top: 5px; padding-bottom: 5px;">Submit</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
