--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
                 <li><a href="/keyaviation/#Services" >Services</a></li>
                 <li><a href="/keyaviation/#Investors" >Investors</a></li>
                 <li><a href="/keyaviation/#Contact" >Contact</a></li>
-                <li><a href="#" data-uk-smooth-scroll>Log In</a></li>
+                <li><a href="/keyaviation/login" data-uk-smooth-scroll>Log In</a></li>
                 
                 <!-- <li class="uk-parent"><a href="">Services</a></li> -->
             </ul>
@@ -71,7 +71,11 @@
             class="div2">
                 <img src="assets/images/insideplane.png">
             </div>
+            <div class="weird">
+                    <img class="plus" src="assets/images/plus.png">
+            </div>
         </div>
+
     </div>
 
     <div class="boeing">
@@ -126,6 +130,10 @@
                 </ul>
                 <div class="center">
                     <button class="button-style" data-uk-modal="{target:'#detailsOfBoeing'}">AIRCRAFT TECHNICAL DATA</button>
+                </div>
+                <div class="weird">
+                    <img class="plus" src="assets/images/plus.png">
+                    <img class="vu" src="assets/images/v.png">
                 </div>
             </div><div
             class="right-block">
@@ -197,6 +205,10 @@
                     <li>2nd Aircraft modification – 3.5 million USD<br />Total of 5.5 million USD for second aircraft</li>
                     <li>3rd Aircraft modification – 3 million USD<br />Total of 5 million USD for third aircraft</li>
                 </ul>
+                <div class="weird">
+                    <img class="plus" src="assets/images/plus.png">
+                    <img class="vu" src="assets/images/U.png">
+                </div>
             </div><div
             class="right-block">
                 <h4 class="yellow">INVESTMENT AND RETURN</h4>
