--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                 <li><a href="/keyaviation/#Services" >Services</a></li>
                 <li><a href="/keyaviation/#Investors" >Investors</a></li>
                 <li><a href="/keyaviation/#Contact" >Contact</a></li>
-                <li><a href="#" data-uk-smooth-scroll>Log In</a></li>
+                <li><a href="#">Log In</a></li>
                 
                 <!-- <li class="uk-parent"><a href="">Services</a></li> -->
             </ul>
