--- a/projects.html
+++ b/projects.html
@@ -207,7 +207,7 @@
                 </ul>
                 <div class="weird">
                     <img class="plus" src="assets/images/plus.png">
-                    <img class="vu" src="assets/images/U.png">
+                    <img class="vu" src="assets/images/u.png">
                 </div>
             </div><div
             class="right-block">
