--- a/projects.html
+++ b/projects.html
@@ -163,8 +163,8 @@
                         <img src="assets/images/boeing21.jpg" width="800" height="200">
                         <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content ">
                             <div class="overlay-inside-content">
-                                <h1>Boeing 737-400 HGW <br />LG Aviation, Inc Aircraft Services</h1>
-                                <p>Aircraft acquisition, refurbish and sale for profit.</p>
+                                <h1>Aircraft Modification</h1>
+                                <p>ERJ – 145 50 Pax To ERJ-145 VIP 15/17 Pax</p>
                             </div>
                         </div>
                     </li>
@@ -172,8 +172,8 @@
                         <img src="assets/images/boeing22.jpeg" width="800" height="200">
                         <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content ">
                             <div class="overlay-inside-content">
-                                <h1>Boeing 737-400 HGW <br />LG Aviation, Inc Aircraft Services</h1>
-                                <p>Aircraft acquisition, refurbish and sale for profit.</p>
+                                <h1>Aircraft Modification</h1>
+                                <p>ERJ – 145 50 Pax To ERJ-145 VIP 15/17 Pax</p>
                             </div>
                         </div>
                     </li>
@@ -181,8 +181,8 @@
                         <img src="assets/images/boeing23.jpeg" width="800" height="200">
                         <div class="uk-overlay-panel uk-overlay-background uk-overlay-fade overlay-inside-content">
                             <div class="overlay-inside-content">
-                                <h1>Boeing 737-400 HGW <br />LG Aviation, Inc Aircraft Services</h1>
-                                <p>Aircraft acquisition, refurbish and sale for profit.</p>
+                                <h1>Aircraft Modification</h1>
+                                <p>ERJ – 145 50 Pax To ERJ-145 VIP 15/17 Pax</p>
                             </div>
                         </div>
                     </li>
