--- a/login.html
+++ b/login.html
@@ -26,11 +26,11 @@
     <nav class="uk-navbar" style="text-align: center;">
         <div style="display: inline-block;" class="main-nav">
             <ul class="uk-navbar-nav">
-                <li class="active"><a href="/keyaviation/#Home" data-uk-smooth-scroll><span class="word">HOME</span></a></li>
-                <li><a href="/keyaviation/#AboutUs" data-uk-smooth-scroll><span class="word">ABOUT US</span></a></li>
-                <li><a href="/keyaviation/#Services" data-uk-smooth-scroll><span class="word">SERVICES</span></a></li>
-                <li><a href="/keyaviation/#Investors" data-uk-smooth-scroll><span class="word">INVESTORS</span></a></li>
-                <li><a href="/keyaviation/#Contact" data-uk-smooth-scroll><span class="word">CONTACT</span></a></li>
+                <li class="active"><a href="/keyaviation/#Home"><span class="word">HOME</span></a></li>
+                <li><a href="/keyaviation/#AboutUs"><span class="word">ABOUT US</span></a></li>
+                <li><a href="/keyaviation/#Services"><span class="word">SERVICES</span></a></li>
+                <li><a href="/keyaviation/#Investors"><span class="word">INVESTORS</span></a></li>
+                <li><a href="/keyaviation/#Contact"><span class="word">CONTACT</span></a></li>
                 <li><a href="/keyaviation/login">LOG IN</a></li>
                 
                 <!-- <li class="uk-parent"><a href="">Services</a></li> -->
@@ -51,11 +51,11 @@
     <div id="toggler" class="uk-offcanvas">
         <div class="uk-offcanvas-bar">
             <ul>
-                <li class="active"><a href="/keyaviation/#Home" data-uk-smooth-scroll><span class="word">HOME</span></a></li>
-                <li><a href="/keyaviation/#AboutUs" data-uk-smooth-scroll><span class="word">ABOUT US</span></a></li>
-                <li><a href="/keyaviation/#Services" data-uk-smooth-scroll><span class="word">SERVICES</span></a></li>
-                <li><a href="/keyaviation/#Investors" data-uk-smooth-scroll><span class="word">INVESTORS</span></a></li>
-                <li><a href="/keyaviation/#Contact" data-uk-smooth-scroll><span class="word">CONTACT</span></a></li>
+                <li class="active"><a href="/keyaviation/#Home" <span class="word">HOME</span></a></li>
+                <li><a href="/keyaviation/#AboutUs"><span class="word">ABOUT US</span></a></li>
+                <li><a href="/keyaviation/#Services"><span class="word">SERVICES</span></a></li>
+                <li><a href="/keyaviation/#Investors"><span class="word">INVESTORS</span></a></li>
+                <li><a href="/keyaviation/#Contact"><span class="word">CONTACT</span></a></li>
                 <li><a href="/keyaviation/login">LOG IN</a></li>
             </ul>
         </div>
